--- a/abc.html
+++ b/abc.html
@@ -16,6 +16,7 @@
     <div class="container">
       <form method="post">
         <h1 class="text-center mt-4 mb-4 text-danger">Afet Yardım</h1>
+        <hr />
         <div class="row">
           <div class="col-md-4">
             <div class="mb-3">
@@ -91,11 +92,10 @@
       </form>
     </div>
     <div class="container">
-    <p class="text-center mt-4 mb-5">Yardım taleplerini toplu bir şekilde ilgili birimlere ulaştırmaya çalışıyoruz. Lütfen methanetli olun ve sakinliğinizi koruyun.<br/>Sizi yalnız bırakmayacağız.</p>
-    <hr class="border border-dark rounded border-4 opacity-50">
-      <h1 class="text-center mt-4 mb-4 text-danger">
+      <h1 class="text-center mt-5 mb-3 text-danger">
         Kayıtlı Yardım Talepleri
       </h1>
+      <hr />
       <form action="" method="post">
         <div class="row">
           <div class="col-md-4">
@@ -129,17 +129,14 @@
         </div>
       </form>
     </div>
-    <div class="container mt-4 mb-4">
-      <div class="row text-center font-monospace">
-        <div class="col-md-4 p-3">Adıyaman (3076)</div>
-        <div class="col-md-4 p-3">Batman (12)</div>
-        <div class="col-md-4 p-3">Bingöl (5)</div>
-        <div class="col-md-4 p-3">Adıyaman (3076)</div>
-        <div class="col-md-4 p-3">Batman (12)</div>
-        <div class="col-md-4 p-3">Bingöl (5)</div>
-        <div class="col-md-4 p-3">Adıyaman (3076)</div>
-        <div class="col-md-4 p-3">Batman (12)</div>
-       
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2 pb-4">Adıyaman (3076)</div>
+        <div class="col-md-2 pb-4">Batman (12)</div>
+        <div class="col-md-2 pb-4">Bingöl (5)</div>
+        <div class="col-md-2 pb-4">Bitlis (1)</div>
+        <div class="col-md-2 pb-4">Bitlis (1)</div>
+        <div class="col-md-2 pb-4">Bitlis (1)</div>
       </div>
     </div>
 
