--- a/abc.html
+++ b/abc.html
@@ -16,86 +16,111 @@
     <div class="container">
       <form method="post">
         <h1 class="text-center mt-4 mb-4 text-danger">Afet Yardım</h1>
-        <hr />
         <div class="row">
           <div class="col-md-4">
             <div class="mb-3">
-              <label class="form-label">il</label>
-              <select class="form-select">
-                <option selected>Seçin...</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+              <label class="form-label"
+                >il <span class="text-danger">(Zorunlu)</span></label
+              >
+              <select id="selectCity" class="form-select">
+                <option value="0" selected>Seçin...</option>
+                <?php
+              foreach ($cityData as $value) { ?>
+                <option value="<?= $value['sehir_key'] ?>">
+                  <?= $value['sehir_title'] ?>
+                </option>
+                <?php } ?>
               </select>
             </div>
           </div>
           <div class="col-md-4">
             <div class="mb-3">
-              <label class="form-label">ilçe</label>
-              <select class="form-select">
+              <label class="form-label"
+                >ilçe <span class="text-danger">(Zorunlu)</span></label
+              >
+              <select id="selectCounty" class="form-select">
                 <option selected>Seçin...</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
               </select>
             </div>
           </div>
           <div class="col-md-4">
             <div class="mb-3">
-              <label class="form-label">Mahalle</label>
-              <select class="form-select">
+              <label class="form-label"
+                >Mahalle <span class="text-danger">(Zorunlu)</span></label
+              >
+              <select id="selectNeighbourhood" class="form-select">
                 <option selected>Seçin...</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
               </select>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mb-3">
+              <label class="form-label">Cadde / Sokak</label>
+              <input id="street" type="text" class="form-control" />
             </div>
           </div>
           <div class="col-md-4">
             <div class="mb-3">
               <label class="form-label">Apartman Adı</label>
-              <input type="text" class="form-control" />
+              <input id="apartmentName" type="text" class="form-control" />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="mb-3">
+              <label class="form-label">Apartman No</label>
+              <input id="apartmentNo" type="text" class="form-control" />
             </div>
           </div>
           <div class="col-md-4">
             <div class="mb-3">
               <label class="form-label">Telefon Numarası</label>
-              <input type="text" class="form-control" />
+              <input id="telephoneNo" type="text" class="form-control" />
             </div>
           </div>
           <div class="col-md-4">
             <div class="mb-3">
               <label class="form-label">Ad Soyad</label>
-              <input type="text" class="form-control" />
+              <input id="nameSurname" type="text" class="form-control" />
             </div>
           </div>
-          <div class="col-md-6 mx-auto">
+          <div class="col-md-4 mx-auto">
             <div class="mb-3">
               <label class="form-label"
                 >Kaynak <span class="text-danger">(Zorunlu)</span></label
               >
-              <input type="text" class="form-control" required />
+              <input id="source" type="text" class="form-control" required />
             </div>
           </div>
           <div class="col-md-6 mx-auto">
             <div class="mb-3">
               <label class="form-label">Not</label>
-              <textarea class="form-control" rows="1"></textarea>
+              <textarea id="note" class="form-control" rows="2"></textarea>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="d-grid gap-2 col-4 mx-auto mt-4">
-            <button class="btn btn-lg btn-primary" type="submit">GÖNDER</button>
+            <button
+              id="submitForm"
+              class="btn btn-lg btn-primary"
+              type="submit"
+            >
+              GÖNDER
+            </button>
           </div>
         </div>
       </form>
     </div>
     <div class="container">
-      <h1 class="text-center mt-5 mb-3 text-danger">
+      <p class="text-center mt-4 mb-5">
+        Yardım taleplerini toplu bir şekilde ilgili birimlere ulaştırmaya
+        çalışıyoruz. Lütfen methanetli olun ve sakinliğinizi koruyun.<br />Sizi
+        yalnız bırakmayacağız.
+      </p>
+      <hr class="border border-dark rounded border-4 opacity-50" />
+      <h1 class="text-center mt-4 mb-4 text-danger">
         Kayıtlı Yardım Talepleri
       </h1>
-      <hr />
       <form action="" method="post">
         <div class="row">
           <div class="col-md-4">
@@ -129,17 +154,47 @@
         </div>
       </form>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 pb-4">Adıyaman (3076)</div>
-        <div class="col-md-2 pb-4">Batman (12)</div>
-        <div class="col-md-2 pb-4">Bingöl (5)</div>
-        <div class="col-md-2 pb-4">Bitlis (1)</div>
-        <div class="col-md-2 pb-4">Bitlis (1)</div>
-        <div class="col-md-2 pb-4">Bitlis (1)</div>
-      </div>
+    <div class="container mt-5 mb-4">
+      <table class="table">
+        <thead class="table-dark rounded">
+          <tr>
+            <th scope="col">İl</th>
+            <th scope="col">İlçe</th>
+            <th scope="col">Adres</th>
+            <th scope="col">İletişim</th>
+            <th scope="col">Kaynak</th>
+            <th scope="col">Not</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-
+    <script src="app/view/js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
